BaseGL: ImageLayout3D WIP

--- a/modules/basegl/CMakeLists.txt
+++ b/modules/basegl/CMakeLists.txt
@@ -42,6 +42,7 @@ set(HEADER_FILES
     include/modules/basegl/processors/imageprocessing/imagehighpass.h
     include/modules/basegl/processors/imageprocessing/imageinvert.h
     include/modules/basegl/processors/imageprocessing/imagelayer.h
+    include/modules/basegl/processors/imageprocessing/imagelayout3d.h
     include/modules/basegl/processors/imageprocessing/imagelayoutgl.h
     include/modules/basegl/processors/imageprocessing/imagelowpass.h
     include/modules/basegl/processors/imageprocessing/imagemapping.h
@@ -152,6 +153,7 @@ set(SOURCE_FILES
     src/processors/imageprocessing/imagehighpass.cpp
     src/processors/imageprocessing/imageinvert.cpp
     src/processors/imageprocessing/imagelayer.cpp
+    src/processors/imageprocessing/imagelayout3d.cpp
     src/processors/imageprocessing/imagelayoutgl.cpp
     src/processors/imageprocessing/imagelowpass.cpp
     src/processors/imageprocessing/imagemapping.cpp
