Core: Handle TF load/save using the regular data reader/writer and factories.

--- a/modules/python3/bindings/CMakeLists.txt
+++ b/modules/python3/bindings/CMakeLists.txt
@@ -8,6 +8,7 @@ set(HEADER_FILES
     include/inviwopy/pydataformat.h
     include/inviwopy/pydatamapper.h
     include/inviwopy/pydatareaders.h
+    include/inviwopy/pydatawriters.h
     include/inviwopy/pydocument.h
     include/inviwopy/pyevent.h
     include/inviwopy/pyflags.h
@@ -42,6 +43,7 @@ set(SOURCE_FILES
     src/pydatamapper.cpp
     src/pydocument.cpp
     src/pydatareaders.cpp
+    src/pydatawriters.cpp
     src/pyevent.cpp
     src/pyflags.cpp
     src/pyglmmattypes.cpp
