Core: EventTransformer WIP

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -121,6 +121,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/touchstate.h
     ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/viewevent.h
     ${IVW_INCLUDE_DIR}/inviwo/core/interaction/events/wheelevent.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/interaction/eventtransformer.h
     ${IVW_INCLUDE_DIR}/inviwo/core/interaction/interactionhandler.h
     ${IVW_INCLUDE_DIR}/inviwo/core/interaction/pickingaction.h
     ${IVW_INCLUDE_DIR}/inviwo/core/interaction/pickingcontroller.h
@@ -506,6 +507,7 @@ set(SOURCE_FILES
     interaction/events/touchstate.cpp
     interaction/events/viewevent.cpp
     interaction/events/wheelevent.cpp
+    interaction/eventtransformer.cpp
     interaction/interactionhandler.cpp
     interaction/pickingaction.cpp
     interaction/pickingcontroller.cpp
@@ -772,6 +774,7 @@ set(TEST_FILES
     tests/unittests/dispatch-test.cpp
     tests/unittests/document-test.cpp
     tests/unittests/enumoptionproperty-test.cpp
+    tests/unittests/eventtransformer-test.cpp
     tests/unittests/filesystem-test.cpp
     tests/unittests/glm-test.cpp
     tests/unittests/image-tests.cpp
