Python3: Added bindings for bitset

--- a/modules/python3/CMakeLists.txt
+++ b/modules/python3/CMakeLists.txt
@@ -9,6 +9,7 @@ set(HEADER_FILES
     include/modules/python3/processors/numpyvolume.h
     include/modules/python3/processors/pythonscriptprocessor.h
     include/modules/python3/processortrampoline.h
+    include/modules/python3/pybindflags.h
     include/modules/python3/pybindutils.h
     include/modules/python3/pyportutils.h
     include/modules/python3/python3module.h
@@ -30,6 +31,7 @@ set(SOURCE_FILES
     src/processors/numpyvolume.cpp
     src/processors/pythonscriptprocessor.cpp
     src/processortrampoline.cpp
+    src/pybindflags.cpp
     src/pybindutils.cpp
     src/pyportutils.cpp
     src/python3module.cpp
