--- a/modules/python3/bindings/CMakeLists.txt
+++ b/modules/python3/bindings/CMakeLists.txt
@@ -2,6 +2,7 @@
 set(HEADER_FILES
     include/inviwopy/inviwopy.h
     include/inviwopy/pybuffer.h
+    include/inviwopy/pybitset.h
     include/inviwopy/pycamera.h
     include/inviwopy/pycameraproperty.h
     include/inviwopy/pycompositeproperties.h
@@ -36,6 +37,7 @@ ivw_group("Header Files" BASE ${CMAKE_CURRENT_SOURCE_DIR}/include/inviwopy ${HEA
 set(SOURCE_FILES
     src/inviwopy.cpp
     src/pybuffer.cpp
+    src/pybitset.cpp
     src/pycamera.cpp
     src/pycameraproperty.cpp
     src/pycompositeproperties.cpp
