--- a/modules/brushingandlinking/CMakeLists.txt
+++ b/modules/brushingandlinking/CMakeLists.txt
@@ -1,8 +1,6 @@
-#--------------------------------------------------------------------
 # Inviwo BrushingAndLinking Module
 ivw_module(BrushingAndLinking)
 
-#--------------------------------------------------------------------
 # Add header files
 set(HEADER_FILES
     include/modules/brushingandlinking/brushingandlinkingmanager.h
@@ -15,7 +13,6 @@ set(HEADER_FILES
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-#--------------------------------------------------------------------
 # Add source files
 set(SOURCE_FILES
     src/brushingandlinkingmanager.cpp
@@ -27,26 +24,15 @@ set(SOURCE_FILES
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
-
-#--------------------------------------------------------------------
-# Add shaders
-set(SHADER_FILES
-    #${CMAKE_CURRENT_SOURCE_DIR}/glsl/brushingandlinkingprocessor.frag
-)
-ivw_group("Shader Files" ${SHADER_FILES})
-
-
-#--------------------------------------------------------------------
 # Add Unittests
 set(TEST_FILES
 	#${CMAKE_CURRENT_SOURCE_DIR}/tests/brushingandlinking-test.cpp
 )
 ivw_add_unittest(${TEST_FILES})
 
-#--------------------------------------------------------------------
 # Create module
-ivw_create_module(${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES})
+ivw_create_module(${SOURCE_FILES} ${HEADER_FILES})
 
-#--------------------------------------------------------------------
-# Add shader directory to pack
-# ivw_add_to_module_pack(${CMAKE_CURRENT_SOURCE_DIR}/glsl)
+if(IVW_MODULE_PYTHON3)
+    add_subdirectory(bindings)
+endif()
