--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -91,13 +91,14 @@ jobs:
         -username "inviwo"
         -password "${{ secrets.GITHUB_TOKEN }}"
 
-    - name: Apt Install, switch to gcc-11
+    - name: Apt Install, switch to gcc-12
       shell: bash
       if: runner.os == 'Linux'
       run: |
-        sudo apt install libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev libglew-dev ninja-build gcc-11 g++-11
-        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 110 --slave /usr/bin/g++ g++ /usr/bin/g++-11 --slave /usr/bin/gcov gcov /usr/bin/gcov-11
-        sudo update-alternatives --set gcc /usr/bin/gcc-11
+        sudo apt-get update
+        sudo apt install --fix-missing libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev libglew-dev ninja-build gcc-12 g++-12
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 120 --slave /usr/bin/g++ g++ /usr/bin/g++-12 --slave /usr/bin/gcov gcov /usr/bin/gcov-12
+        sudo update-alternatives --set gcc /usr/bin/gcc-12
   
     - name: Brew Install
       shell: bash
@@ -108,7 +109,7 @@ jobs:
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
-        version: 6.2.3
+        version: 6.3.2
         dir: ${{ github.workspace }}
     
     - name: Clone Inviwo
