--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -47,13 +47,17 @@ jobs:
     steps:
     - name: Chocolatey Install 
       if: runner.os == 'Windows'
-      shell: bash
+      shell: pwsh
       run: |
         # Choco-Install is GH Actions wrappers around choco, which does retries
         Choco-Install -PackageName doxygen.install 
         Choco-Install -PackageName nsis
         Choco-Install -PackageName tinytex
 
+    - name: Chocolatey Install paths
+      if: runner.os == 'Windows'
+      shell: bash
+      run: |
         GP=`cygpath -u $GITHUB_PATH` 
         echo "/c/Program Files/doxygen/bin" >> $GP
         echo "/c/Program Files (x86)/NSIS" >> $GP
