--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -41,7 +41,11 @@ if(IVW_DOXYGEN_PROJECT)
     # sets: DOXYGEN_FOUND, DOXYGEN_EXECUTABLE, DOXYGEN_DOT_FOUND, DOXYGEN_DOT_EXECUTABLE
     find_package(Doxygen REQUIRED)
     find_package(Python3 COMPONENTS Interpreter REQUIRED)
-    find_program(IVW_DOXYGEN_LATEX_PATH NAMES pdflatex pdflatex.exe latex latex.exe REQUIRED)
+    get_filename_component(doxygenBinDir ${DOXYGEN_EXECUTABLE} DIRECTORY)
+    find_program(IVW_DOXYGEN_LATEX_PATH 
+        NAMES pdflatex pdflatex.exe latex latex.exe 
+        HINTS ${doxygenBinDir} /Library/TeX/texbin
+        REQUIRED)
 else()
     return()
 endif()
